refactor: merge and refine jdk17 notations to jdk8